<resources>
    <string name="app_name">VideoGames RF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps_api_key">fdlkjfdgljkfdgkljfdgkljfdglkj</string>
    <string name="dailyfood">Comida diaria:</string>
    <string name="life">Esperanza de vida:</string>
    <string name="coatType">Tipo de pelo:</string>
    <string name="Temperament">Temperamento:</string>
    <string name="exercise">Ejercicio requerido:</string>
    <string name="text">Selecciona para conocer un poco mas sobre esta raza</string>
    <string name="Title">Title</string>
    <string name="daily">Daily</string>
    <string name="Life">Life</string>
    <string name="Coat">Coat</string>
    <string name="Temp">Temperamento</string>
    <string name="Exercise">Exercise</string>
    <string name="size">Tamaño:</string>
    <string name="Size">Size</string>
    <string name="log_id_received">Id recibido %1$d</string>
    <string name="dog_image">Imagen de un perro</string>
    <string name="perritos_disponibles_para_adopcion">Perritos disponibles para adopción</string>
    <string name="favoritos">Favoritos</string>
    <string name="favorite_dogs">Perritos favoritos</string>
    <string name="cerrar">Cerrar</string>
    <string name="google_maps_key">AIzaSyBKbKnnbqhIca9qjxwhIHrwzO-lupfVuCs</string>
    <string name="like_button">Me gusta</string>
    <string name="whatsapp_button">Contacto por WhatsApp</string>
    <string name="edad_del_perro">Edad del Perro</string>
    <string name="ubicaci_n_del_perro">Ubicación del Perro</string>
    <string name="nombre_del_perro">Nombre del Perro</string>
</resources>